<resources>
    <string-array name="product_category_array">
        <item>Kitchen Appliances</item>
        <item>TV and Entertainment</item>
        <item>Audio</item>
        <item>Computing</item>
        <item>Phones</item>
        <item>Cameras</item>
        <item>Smart Tech</item>
    </string-array>

    <string-array name="sort_array">
        <item>Sort</item>
        <item>Name Ascending</item>
        <item>Name Descending</item>
        <item>Price Ascending</item>
        <item>Price Descending</item>
        <item>Manufacturer Ascending</item>
        <item>Manufacturer Descending</item>
    </string-array>

    <string name="app_name">OnlineElectronicStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="admin">Admin</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>
    <string name="address">Address</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="done">Done</string>
    <string name="description">Description</string>
    <string name="product_details">Product Details</string>
    <string name="product_title">Product Title</string>
    <string name="add_product">Add product</string>
    <string name="products">Products</string>
    <string name="my_profile">My Profile</string>
    <string name="cart">Cart</string>
    <string name="saved_card_details">Saved Card Details</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="price">Price</string>
    <string name="stock">Stock</string>
    <string name="update_stock">Update Stock</string>
    <string name="admin_code_admin_use_only">Admin Code (Admin Use Only)</string>
    <string name="go_back">Go Back</string>
</resources>