<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#70FFEB3B"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/burkesElectronicsLogo"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="20dp"
        app:srcCompat="@drawable/burkes_electronics_no_background_logo" />

    <EditText
        android:id="@+id/emailET"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/burkesElectronicsLogo"
        android:layout_centerHorizontal="true"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/passwordET"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailET"
        android:layout_centerHorizontal="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/passwordET"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#65D1FF"
        android:text="@string/log_in"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/adminBtn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logInBtn"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#65D1FF"
        android:inputType="text"
        android:text="@string/admin"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/createAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/adminBtn"
        android:layout_centerHorizontal="true"
        android:text="@string/create_account" />


</RelativeLayout>