<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#70A9CFE1"
                android:orientation="horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/upload_photo"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/uploadImageView"
                    android:layout_width="139dp"
                    android:layout_height="135dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_baseline_add_circle_outline_24" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#31FFFF7A"
                android:orientation="horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/product_details"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/title_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:hint="@string/product_title" />

                <EditText
                    android:id="@+id/description_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_et"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:hint="@string/description"
                    android:maxLength="250" />

                <EditText
                    android:id="@+id/manufacturer_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description_et"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:hint="Manufacturer" />

                <EditText
                    android:id="@+id/price_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/manufacturer_et"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:hint="Price"
                    android:maxLength="250" />

                <Spinner
                    android:id="@+id/product_category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_below="@+id/price_et"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="20dp"
                    android:spinnerMode="dropdown" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/addProductButton"
                android:layout_width="300dp"
                android:layout_height="48dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_button"
                android:text="@string/add_product"
                android:textColor="#fff"
                app:backgroundTint="#65D1FF" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>